feat: get community spent proposal

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <button id="emergencyButton">Go to emergency fund data</button>
 <br />
 <br />
-<button id="validatorsButton">Go to emergency validators data</button>
+<button id="validatorsButton">Go to validators data</button>
 <script>
     document.addEventListener('click',(e)=>{
         if(e.target.id==="emergencyButton"){
